--- a/MotorRegisterLib/.classpath
+++ b/MotorRegisterLib/.classpath
@@ -2,6 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="library/htmlunit-2.15-OSGi.jar"/>
+	<classpathentry kind="lib" path="library/htmlunit-2.15-OSGi.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="http://htmlunit.sourceforge.net/apidocs/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
